# tommyjarvis

./: .gitmodules  .spacemacs  20191108_2urls  20191108urls  leetcodesurl  onetaburls_20190319  oneurls  oneurls_20210326  oneurls_20210326_firefox  queque  safariurl  sdurl
23种设计模式的java实现/: 23model.txt
Alfred.alfredpreferences/preferences/features/clipboard/: prefs.plist
Alfred.alfredpreferences/preferences/features/defaultresults/: prefs.plist
Alfred.alfredpreferences/preferences/features/terminal/: prefs.plist
Alfred.alfredpreferences/remote/pages/: 019595D4-D3B6-4A1C-86AC-7E5D1E0014E2.data  29BDEF0A-F767-4821-960A-3423342B12AE.data  3738922C-75D0-4BF2-B593-938F865B462F.data  47A2838D-D646-41F9-ADDD-B1D8E55E05C4.data  77A63E39-E225-4979-9702-A3FB7346FF2F.data  FFBCFC3C-DFC6-47B1-955E-47178C4C5CB7.data  pages.data
Alfred.alfredpreferences/workflows/user.workflow.411081FB-4FBA-4C84-B9A1-08F3F0355FD3/: info.plist
Alfred.alfredpreferences/workflows/user.workflow.A9F4F71C-E512-4D3C-AA4D-F9B67A4B8B54/: info.plist
Alfred.alfredpreferences/workflows/user.workflow.C19E26B0-8F2C-4366-8EF4-620361C9B7F9/: info.plist
Alfred.alfredpreferences/workflows/user.workflow.C6F7F899-4A3C-4D8F-BCFA-BD97B7B8E398/: info.plist
Alfred.alfredpreferences/workflows/user.workflow.CF8DE33D-6C8C-4D4F-A07F-82D7F6205060/: info.plist  r.py
Alfred.alfredpreferences/workflows/user.workflow.DB187213-E82E-4D5D-A50F-C6A7E8008959/: info.plist
Alfred.alfredpreferences/workflows/user.workflow.FADF909A-FA90-4968-9C40-F33913C13C8A/: info.plist
autossh/: so  sshdev  to
c/: CMakeLists.txt  a.out  bitmap.cpp  dynamicNumberLength.c  epoll_example_et_lt.c  hello.c  hello.h  main.cpp  test.c
c/base/socket/: socket_init.c
golang/remosis/: config.json  main.go
golang/remosis/Godeps/: Godeps.json
golang/remosis/actions/email/: auth.go  email.go  smtp.go
golang/remosis/actions/rdbtool/: rdbtool.go
golang/remosis/config/: config.go
golang/remosis/deploy/conf/: redistemplate.conf  template.json
golang/remosis/deploy/sh/: build.sh  runCluster.sh  start.sh  test.sh
golang/remosis/server/: mghttp.go  mghttp_test.go  msocket.go  protocol.go  translation.go
golang/remosis/sys/: common.go  node.go  redis.go  sys.go
javabase/: pom.xml
javabase/src/main/java/: Main.java
javabase/src/main/lua/: fiblaqi.lua  test.lua  wrk_lua.lua
javabase/src/main/resources/: application.properties  application.yml  base.re  bootstrap.yml  logback-spring.xml
javabase/src/test/: Test.py
javabase/src/test/java/: Test2.java
javabase/src/test/resources/: logback-spring-bk.xml
javabase/src/test/scala/: Feeder.scala  TestingSimulation.scala
leetcode/: Maxlen.java
myGolangs/: README.md  Untitled-1.md  doho.md  main.go
myGolangs/arigth/: arigth  baseArgithms.go
myGolangs/codeBetter/: test.go
myGolangs/concurrency/waitGroup/: waitGroupBug.go
myGolangs/context/: httpCancel.go  sendCancel.go
myGolangs/datastructures/: lockFreeQueue.go
myGolangs/error/: err.go  err2.go
myGolangs/fsmengine/: callback.go  fsm.go  main.go
myGolangs/golinkname/: testLinkname.go
myGolangs/gorutine/: LockOsThreadTest.go  blockwhenfor.go  main.go
myGolangs/grpc/: rpc.go
myGolangs/http/: simpleHttp.go
myGolangs/map/: allocateMap.go  main.go
myGolangs/mem/: mem.go
myGolangs/ostools/slices/: test.go
myGolangs/ref/: reflectTest.go
myGolangs/stringsCode/: main.go
myGolangs/test/: main_test.go
myGolangs/time/: ticker.go
myGolangs/valueExc/: main.go
myGolangs/webassembly/: fib.wasm  main.go
myscripts/: curl_time.txt
rusts/firsts/: Cargo.toml
rusts/firsts/src/: lib.rs  main.rs
rusts/rustlings/exercises/: test1.rs  test2.rs  test3.rs  test4.rs
rusts/study_rust/: CMakeLists.txt  Cargo.toml  build.ll  build.rs  build.s  logs  vs-launch
rusts/study_rust/cargo_new_lib/: Cargo.toml
rusts/study_rust/cargo_new_lib/src/: lib.rs
rusts/study_rust/cargo_two/: Cargo.toml
rusts/study_rust/cargo_two/src/: lib.rs
rusts/study_rust/src/: cg  lib.rs  main.rs  main_test.rs  other_test.rs
rusts/study_rust/src/advances/: mod.rs  pin_test.rs  pined_heap.rs  pined_test.rs
rusts/study_rust/src/base_concept/: array_my.rs  base.rs  cells.rs  custom_closure.rs  custom_error.rs  custom_impl_inherit.rs  exter_test.rs  ft.rs  fun.rs  iters.rs  mod.rs  structs.rs
rusts/study_rust/src/coroutines/: base_coroutine.rs  mod.rs
rusts/study_rust/src/doc/main/: index.html
rusts/study_rust/src/doc/src/main/: main.rs.html
rusts/study_rust/src/dyn_struct/: dyn_test.rs  mod.rs
rusts/study_rust/src/examples/: example.rs
rusts/study_rust/src/ffi/: ffi_example.rs  mod.rs
rusts/study_rust/src/file_op_test/: file_op.rs  mod.rs
rusts/study_rust/src/file_ops/: file_ops_file.rs  lib.rs  mod.rs
rusts/study_rust/src/indexes/: base.rs  deep.rs  mod.rs  refcelltest.rs
rusts/study_rust/src/lambda/: closure.rs
rusts/study_rust/src/other_hard/: array_test.rs  mod.rs
rusts/study_rust/src/otherlibs/: mod.rs  sourcemaptest.rs
rusts/study_rust/src/ownship_test/: copy.rs  mod.rs
rusts/study_rust/src/ownshiptest/: drop_same_time.rs  life_scope_test.rs  mod.rs  own_ship_concept.rs  own_ship_two.rs
rusts/study_rust/src/patterns/: better_state_pattern.rs  mod.rs  state_pattern.rs
rusts/study_rust/src/reflects/: refs.rs
rusts/study_rust/src/thread_test/: custom_thread.rs  mod.rs  thread.rs
rusts/study_rust/src/thread_web/: 404.html  hello.html  mod.rs  multi_thread_web.rs  single_web.rs
rusts/study_rust/src/threads/: custom_thread.rs  mod.rs  other_thread.rs  share_data.rs
rusts/study_rust/src/trait_concept/: advance.rs  basic.rs  fns.rs  inherits.rs  mod.rs  trait_for_trait.rs
rusts/study_rust/src/unsafes/: mod.rs  my_unsafe.rs
rusts/study_rust/wasm/step1/: build.sh  target.c  target.html  target.js  target.wasm  target2.html  target2.js  target2.wasm
rusts/study_rust/wasm/wasm_study/: Cargo.toml
rusts/study_rust/wasm/wasm_study/src/: lib.rs
rusts/tt/: Cargo.toml
rusts/tt/src/: main.rs
scala-base/learning-fpinscala/: build.sbt
springs_learn_lmq/: springboot.md
(+283 files in other folders)
