cmake_minimum_required(VERSION 3.12)
project(study_rust)

set(CMAKE_CXX_STANDARD 14)

include_directories(.)
include_directories(src)
include_directories(target)

add_executable(study_rust
        src/main.rs
        target/debug/deps/study_rust-c35df3666c581f99.dSYM/Contents/Resources/DWARF/study_rust-c35df3666c581f99
        target/debug/deps/study_rust-c35df3666c581f99.dSYM/Contents/Info.plist
        target/debug/deps/study_rust-f20e5fc89d5965e1.dSYM/Contents/Resources/DWARF/study_rust-f20e5fc89d5965e1
        target/debug/deps/study_rust-f20e5fc89d5965e1.dSYM/Contents/Info.plist
        target/debug/deps/study_rust-c35df3666c581f99
        target/debug/deps/study_rust-c35df3666c581f99.d
        target/debug/deps/study_rust-f20e5fc89d5965e1
        target/debug/deps/study_rust-f20e5fc89d5965e1.d
        target/debug/incremental/study_rust-2mcjj3ltqyhe4/s-f6bddwq1v3-1m4wxbl-b5rc6ws94aae/14f9q1nm86quz32f.o
        target/debug/incremental/study_rust-2mcjj3ltqyhe4/s-f6bddwq1v3-1m4wxbl-b5rc6ws94aae/1bairwq4tiir852b.o
        target/debug/incremental/study_rust-2mcjj3ltqyhe4/s-f6bddwq1v3-1m4wxbl-b5rc6ws94aae/1kdcbky72d2qd8ii.o
        target/debug/incremental/study_rust-2mcjj3ltqyhe4/s-f6bddwq1v3-1m4wxbl-b5rc6ws94aae/209jjgvi35zbadus.o
        target/debug/incremental/study_rust-2mcjj3ltqyhe4/s-f6bddwq1v3-1m4wxbl-b5rc6ws94aae/21ldaa5jbv2gxvh.o
        target/debug/incremental/study_rust-2mcjj3ltqyhe4/s-f6bddwq1v3-1m4wxbl-b5rc6ws94aae/38mx7qxasdaa7y2f.o
        target/debug/incremental/study_rust-2mcjj3ltqyhe4/s-f6bddwq1v3-1m4wxbl-b5rc6ws94aae/3c1cl7scou0oocpe.o
        target/debug/incremental/study_rust-2mcjj3ltqyhe4/s-f6bddwq1v3-1m4wxbl-b5rc6ws94aae/44jz4j58muhz8qzq.o
        target/debug/incremental/study_rust-2mcjj3ltqyhe4/s-f6bddwq1v3-1m4wxbl-b5rc6ws94aae/4ecmv8didqxgmfm3.o
        target/debug/incremental/study_rust-2mcjj3ltqyhe4/s-f6bddwq1v3-1m4wxbl-b5rc6ws94aae/4k0k3o1g0zp63u3m.o
        target/debug/incremental/study_rust-2mcjj3ltqyhe4/s-f6bddwq1v3-1m4wxbl-b5rc6ws94aae/4w0e07tf3xdah03d.o
        target/debug/incremental/study_rust-2mcjj3ltqyhe4/s-f6bddwq1v3-1m4wxbl-b5rc6ws94aae/51yoslez4u69248m.o
        target/debug/incremental/study_rust-2mcjj3ltqyhe4/s-f6bddwq1v3-1m4wxbl-b5rc6ws94aae/5tg5rn46p4i5jut.o
        target/debug/incremental/study_rust-2mcjj3ltqyhe4/s-f6bddwq1v3-1m4wxbl-b5rc6ws94aae/ae6rybn87toxovk.o
        target/debug/incremental/study_rust-2mcjj3ltqyhe4/s-f6bddwq1v3-1m4wxbl-b5rc6ws94aae/bj42iriuctg5j38.o
        target/debug/incremental/study_rust-2mcjj3ltqyhe4/s-f6bddwq1v3-1m4wxbl-b5rc6ws94aae/c4idj698fppl6jt.o
        target/debug/incremental/study_rust-2mcjj3ltqyhe4/s-f6bddwq1v3-1m4wxbl-b5rc6ws94aae/cdj7jz4j51khwqm.o
        target/debug/incremental/study_rust-2mcjj3ltqyhe4/s-f6bddwq1v3-1m4wxbl-b5rc6ws94aae/dep-graph.bin
        target/debug/incremental/study_rust-2mcjj3ltqyhe4/s-f6bddwq1v3-1m4wxbl-b5rc6ws94aae/lhvxyvre2tmwcc0.o
        target/debug/incremental/study_rust-2mcjj3ltqyhe4/s-f6bddwq1v3-1m4wxbl-b5rc6ws94aae/qkt3iqyds8i47kf.o
        target/debug/incremental/study_rust-2mcjj3ltqyhe4/s-f6bddwq1v3-1m4wxbl-b5rc6ws94aae/query-cache.bin
        target/debug/incremental/study_rust-2mcjj3ltqyhe4/s-f6bddwq1v3-1m4wxbl-b5rc6ws94aae/work-products.bin
        target/debug/incremental/study_rust-2mcjj3ltqyhe4/s-f6bddwq1v3-1m4wxbl.lock
        target/debug/incremental/study_rust-3hcwg5evi3614/s-f6apcndybq-1p20j9a-3t2uvxzy7l8bb/25hx91c66y6bfb84.o
        target/debug/incremental/study_rust-3hcwg5evi3614/s-f6apcndybq-1p20j9a-3t2uvxzy7l8bb/3ch9hrne1u0zlv36.o
        target/debug/incremental/study_rust-3hcwg5evi3614/s-f6apcndybq-1p20j9a-3t2uvxzy7l8bb/3nfjfwb3z40ahory.o
        target/debug/incremental/study_rust-3hcwg5evi3614/s-f6apcndybq-1p20j9a-3t2uvxzy7l8bb/3s8m474vptg3o9yu.o
        target/debug/incremental/study_rust-3hcwg5evi3614/s-f6apcndybq-1p20j9a-3t2uvxzy7l8bb/5f3gsc5l75k2qe74.o
        target/debug/incremental/study_rust-3hcwg5evi3614/s-f6apcndybq-1p20j9a-3t2uvxzy7l8bb/dep-graph.bin
        target/debug/incremental/study_rust-3hcwg5evi3614/s-f6apcndybq-1p20j9a-3t2uvxzy7l8bb/gvjrmh0pmy62880.o
        target/debug/incremental/study_rust-3hcwg5evi3614/s-f6apcndybq-1p20j9a-3t2uvxzy7l8bb/query-cache.bin
        target/debug/incremental/study_rust-3hcwg5evi3614/s-f6apcndybq-1p20j9a-3t2uvxzy7l8bb/work-products.bin
        target/debug/incremental/study_rust-3hcwg5evi3614/s-f6apcndybq-1p20j9a.lock
        target/debug/study_rust.dSYM/Contents/Resources/DWARF/study_rust-f20e5fc89d5965e1
        target/debug/study_rust.dSYM/Contents/Info.plist
        target/debug/study_rust
        target/debug/study_rust.d
        target/rls/debug/deps/libstudy_rust-6b70f39d132f48c1.rmeta
        target/rls/debug/deps/libstudy_rust-811d525956071fe1.rmeta
        target/rls/debug/deps/study_rust-6b70f39d132f48c1.d
        target/rls/debug/deps/study_rust-811d525956071fe1.d
        target/rls/debug/incremental/study_rust-1lg92mvmolkyp/s-f6djg2go7t-1omrkw3-1iuyr536neeoz/dep-graph.bin
        target/rls/debug/incremental/study_rust-1lg92mvmolkyp/s-f6djg2go7t-1omrkw3-1iuyr536neeoz/query-cache.bin
        target/rls/debug/incremental/study_rust-1lg92mvmolkyp/s-f6djg2go7t-1omrkw3-1iuyr536neeoz/work-products.bin
        target/rls/debug/incremental/study_rust-1lg92mvmolkyp/s-f6djg2go7t-1omrkw3.lock
        target/rls/debug/incremental/study_rust-2d92zo7ad93v1/s-f6djg284ew-11czf6c-2uwsblq5vctzu/dep-graph.bin
        target/rls/debug/incremental/study_rust-2d92zo7ad93v1/s-f6djg284ew-11czf6c-2uwsblq5vctzu/query-cache.bin
        target/rls/debug/incremental/study_rust-2d92zo7ad93v1/s-f6djg284ew-11czf6c-2uwsblq5vctzu/work-products.bin
        target/rls/debug/incremental/study_rust-2d92zo7ad93v1/s-f6djg284ew-11czf6c.lock
        target/rls/debug/libstudy_rust-6b70f39d132f48c1.d
        target/rls/debug/libstudy_rust-6b70f39d132f48c1.rmeta
        target/rls/debug/libstudy_rust.d
        target/rls/debug/libstudy_rust.rmeta
        Cargo.lock
        Cargo.toml
        study_rust.iml)
