[package]
name = "study_rust"
version = "0.1.0"
authors = ["muqi.lmq <muqi.lmq@autonavi.com>"]
edition = "2018"

[profile.dev]
debug = true
opt-level = 0

[dependencies]
ndarray = "0.12.1"
rayon="1.0.3"
#hammer = { version = "0.5.0"}
#color = { git = "https://github.com/bjz/color-rs" }
#geometry = { path = "crates/geometry" }
