[package]
name = "study_rust"
version = "0.1.0"
authors = ["muqi.lmq <muqi.lmq@autonavi.com>"]
edition = "2018"

[profile.dev]
debug = true
opt-level = 0

[dependencies]
ndarray = "0.12.1"
rayon="1.0.3"
num-bigint="0.2.2"
num-traits="0.2.8"
http="0.1.18"
#hammer = { version = "0.5.0"}
#color = { git = "https://github.com/bjz/color-rs" }
#geometry = { path = "crates/geometry" }
