[workspace]
members=["cargo_new_lib","cargo_two"]
[package]
name = "study_rust"
build ="build.rs"
version = "0.1.0"
authors = ["muqi.lmq <muqi.lmq@autonavi.com>"]
edition = "2018"

[profile.dev]
debug = true
opt-level = 0
[build-dependencies]
rand = "0.7.2"

[dependencies]
ndarray = "0.12.1"
rayon="1.0.3"
num-bigint="0.2.2"
num-traits="0.2.8"
http="0.1.18"
list = "0.1.3"
#hammer = { version = "0.5.0"}
#color = { git = "https://github.com/bjz/color-rs" }
#geometry = { path = "crates/geometry" }
